--- a/second-lesson/index.html
+++ b/second-lesson/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>second-lesson</title>
+    <title>typescript配置文件（自动转换ts文件）</title>
 </head>
 
 <body>
