--- a/third-lesson/index.html
+++ b/third-lesson/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>函数类型</title>
+    <title>基本数据类型</title>
 </head>
 <body>
-    <h1>函数类型</h1>
-    <script src="./app.js"></script>
+    
 </body>
 </html>
